[tool.poetry]
name = "authsys"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README_FASTAPI.md"
readme = "README_STREAMLIT.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
requests = "^2.31.0"
jwt = "^1.3.1"
sqlalchemy = "^2.0.30"
bcrypt = "^4.1.3"
fastapi = "^0.111.0"
psycopg2 = "^2.9.9"
google-generativeai = "^0.5.3"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
